manifests/test02/nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test02
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      name: http
      targetPort: 80
